syntax = "proto3";

//option java_multiple_files = true;
//option java_package = "middleware";
//option java_outer_classname = "MiddleWareProto";
option objc_class_prefix = "RTG";

package middleware;

service Middleware {
    rpc PutArticle(Article) returns (Response_Message) {}
//    rpc GetExistedArticle(Empty) returns (stream Name_Tag) {}
    rpc GetArticle(Name_Tag) returns (Article) {}
}

message Name_Tag {
    string name = 1;
}

message Response_Message {
    string msg = 1;
}

message Article {
    string name = 1;
    string value = 2;
}

message Empty {}